src/objects/c2g__codaBankStatement__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpbankstatement</customHelpPage>
    <description>Stores imported bank statement master details.</description>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Bank Statements</relationshipLabel>
        <relationshipName>BankStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankReconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Reconciliation</label>
        <referenceTo>c2g__codaBankReconciliation__c</referenceTo>
        <relationshipLabel>Bank Statements</relationshipLabel>
        <relationshipName>BankStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ClosingBalance__c</fullName>
        <label>Closing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__OpeningBalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opening Balance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Bank Statements</relationshipLabel>
        <relationshipName>BankStatements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__StatementDate__c</fullName>
        <label>Statement Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Imported</fullName>
                    <default>true</default>
                    <label>Imported</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
                <value>
                    <fullName>Committing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bank Statement</label>
    <listViews>
        <fullName>FF_100_Bruntwood_Management_Services_L_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 100 - Bruntwood Management Services L</label>
        <queue>FF_100_Bruntwood_Management_Services_L</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_106_Bruntwood_Management_Services_3_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 106 - Bruntwood Management Services(3</label>
        <queue>FF_106_Bruntwood_Management_Services_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_110_Manchester_Science_Partnerships_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 110 - Manchester Science Partnerships</label>
        <queue>FF_110_Manchester_Science_Partnerships</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_112_Mi_IDEA_Limited_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 112 - Mi-IDEA Limited</label>
        <queue>FF_112_Mi_IDEA_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_113_Citylabs_2_0_Limited_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 113 - Citylabs 2.0 Limited</label>
        <queue>FF_113_Citylabs_2_0_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_115_Manchester_Technopark_Ltd_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 115 - Manchester Technopark Ltd</label>
        <queue>FF_115_Manchester_Technopark_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_125_Salford_Innovation_Park_Ltd_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 125 - Salford Innovation Park Ltd</label>
        <queue>FF_125_Salford_Innovation_Park_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_130_Principal_Agent_Management_Ltd_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 130 - Principal Agent Management Ltd</label>
        <queue>FF_130_Principal_Agent_Management_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_135_Alderley_Park_Holdings_Ltd_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 135 - Alderley Park Holdings Ltd</label>
        <queue>FF_135_Alderley_Park_Holdings_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_139_Alderley_Imaging_Limited_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 139 - Alderley Imaging Limited</label>
        <queue>FF_139_Alderley_Imaging_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_140_Alderley_Park_Limited_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 140 - Alderley Park Limited</label>
        <queue>FF_140_Alderley_Park_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_141_Circle_Square_District_Holdings_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 141 - Circle Square District Holdings</label>
        <queue>FF_141_Circle_Square_District_Holdings</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_142_Circle_Square_District_Company_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 142 - Circle Square District Company</label>
        <queue>FF_142_Circle_Square_District_Company</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_143_Circle_Square_Green_Company_Ltd_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 143 - Circle Square Green Company Ltd</label>
        <queue>FF_143_Circle_Square_Green_Company_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_144_Bruntwood_Circle_Square_2_Limit_codaBankStatement</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 144 - Bruntwood Circle Square 2 Limit</label>
        <queue>FF_144_Bruntwood_Circle_Square_2_Limit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BS{0000}</displayFormat>
        <label>Bank Statement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Statements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>